--- a/source/less/blocks/photo-list.less
+++ b/source/less/blocks/photo-list.less
@@ -16,15 +16,17 @@
   margin: 10px auto;
   background-color: @bg-lightgrey;
 
-  &--panorama .photo-list__image {
-    position: absolute;
-    width: 320px;
-    height: 137px;
-    margin-left: -20px;
-  }
+  &--panorama {
+    .photo-list__image {
+      position: absolute;
+      width: 320px;
+      height: 137px;
+      margin-left: -20px;
+    }
 
-  &--panorama .photo-list__item-name {
-    margin-top: 150px;
+    .photo-list__item-name {
+      margin-top: 150px;
+    }
   }
 }
 
@@ -87,34 +89,34 @@
       .inner(620px; 0);
       margin-bottom: 20px;
       min-height: 630px;
-    }
 
-    &--panorama .photo-list__image {
-      width: 660px;
-      height: 510px;
-    }
+      .photo-list__image {
+        width: 660px;
+        height: 510px;
+      }
 
-    &--panorama .photo-list__item-name {
-      margin-top: 530px;
-    }
+      .photo-list__item-name {
+        margin-top: 530px;
+      }
 
-    &--panorama .photo-list__item-like {
-      display: flex;
-      flex-direction: row-reverse;
-      justify-content: space-between;
-      align-items: baseline;
-      width: 140px;
-      margin-top: -20px;
-      margin-left: 450px;
-      order: 2;
-    }
+      .photo-list__item-like {
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: space-between;
+        align-items: baseline;
+        width: 140px;
+        margin-top: -20px;
+        margin-left: 450px;
+        order: 2;
+      }
 
-    &--panorama .photo-list__item-paragraph {
-      width: 520px;
-      margin-left: 30px;
-      margin-top: -30px;
-      margin-bottom: 25px;
-      order: 3;
+      .photo-list__item-paragraph {
+        width: 520px;
+        margin-left: 30px;
+        margin-top: -30px;
+        margin-bottom: 25px;
+        order: 3;
+      }
     }
   }
 
@@ -166,26 +168,26 @@
       .inner(940px; 0);
       margin-bottom: 20px;
       min-height: 600px;
-    }
 
-    &--panorama .photo-list__image {
-      width: 1200px;
-      height: 505px;
-      margin-left: -160px;
-    }
+      .photo-list__image {
+        width: 1200px;
+        height: 505px;
+        margin-left: -160px;
+      }
 
-    &--panorama .photo-list__item-name {
-      margin-top: 520px;
-    }
+      .photo-list__item-name {
+        margin-top: 520px;
+      }
 
-    &--panorama .photo-list__item-like {
-      margin-top: -30px;
-      margin-left: 760px;
-    }
+      .photo-list__item-like {
+        margin-top: -30px;
+        margin-left: 760px;
+      }
 
-    &--panorama .photo-list__item-paragraph {
-      width: 880px;
-      margin-top: -20px;
+      .photo-list__item-paragraph {
+        width: 880px;
+        margin-top: -20px;
+      }
     }
   }
 
