--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,6 +1,7 @@
 @import "fonts.less";
 @import "mixins.less";
 @import "variables.less";
+@import "utils.less";
 @import(less) "../../node_modules/normalize.css/normalize.css";
 @import "blocks/page-header.less";
 @import "blocks/page-main.less";
