--- a/source/less/blocks/button-list.less
+++ b/source/less/blocks/button-list.less
@@ -2,16 +2,16 @@
   .link(@bg-white);
 }
 
-.button-list__logo-button {
-  --color: @bg-white;
+.button-list__logo-image {
+  fill: @bg-white;
 
   &:hover,
   &:focus {
-    --color: @col-red;
+    fill: @col-red;
   }
 
   &:active {
-    --color: rgba(255, 255, 255, 0.3);
+    fill: rgba(255, 255, 255, 0.3);
   }
 }
 
@@ -22,22 +22,33 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: @bg-darkgrey;
+  background-color: rgba(40, 54, 69, 0.3);
   border-bottom: 2px solid @col-black;
+  z-index: 6;
 }
 
-.button-list__button-close {
+.button-list__button-close,
+.button-list__button-open {
   background-color: @bg-darkgrey;
   border: none;
-  --color: @bg-white;
+  fill: @bg-white;
+
+  &--opened {
+    display: block;
+  }
+
+  &--closed,
+  &--nojs {
+    display: none;
+  }
 
   &:hover,
   &:focus {
-    --color: @col-red;
+    fill: @col-red;
   }
 
   &:active {
-    --color: rgba(210, 40, 86, 0.3);
+    fill: rgba(210, 40, 86, 0.3);
   }
 }
 
@@ -50,11 +61,11 @@
 @media (min-width: @desktop-width) {
   .button-list {
     width: 220px;
-    background-color: rgba(40, 54, 69, 0.7);
     border: none;
   }
 
-  .button-list__button-close {
+  .button-list__button-close,
+  .button-list__button-open {
     display: none;
   }
 }
