--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -11,6 +11,12 @@
   list-style: none;
   margin: 0;
   padding: 0;
+  background-color: rgba(40, 54, 69, 0.3);
+  z-index: 6;
+
+  &--closed {
+    display: none;
+  }
 }
 
 .page-header__nav-item {
@@ -22,13 +28,14 @@
   text-transform: uppercase;
   text-align: center;
   padding: 25px 70px;
+  z-index: 6;
 }
 
 .page-header__link {
   .link(@bg-white);
 
-  &:hover,
-  &:focus {
+  &:focus,
+  &:hover {
     color: @col-red;
   }
 
@@ -42,14 +49,25 @@
     .inner(660px; 20px);
   }
 
+  .page-header__nav-list {
+    .inner(660px; 0);
+
+    &--closed {
+      display: none;
+    }
+
+    &--nojs {
+      display: block;
+    }
+  }
+
   .page-header__nav-item {
-    width: auto;
+    width: 520px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .page-header {
-
     background-color: transparent;
   }
 
@@ -58,11 +76,13 @@
     justify-content: space-around;
     flex-wrap: nowrap;
     align-items: center;
-    background-color: transparent;
+    background-color: rgba(40, 54, 69, 0.3);
+    z-index: 6;
     .inner(1180px; 10px);
   }
 
   .page-header__nav-list {
+    display: flex;
     width: 680px;
     flex-direction: row;
     justify-content: space-around;
@@ -74,6 +94,8 @@
     .fonts(400; 18px; 18px);
     padding: 0;
     border: none;
+    background-color: rgba(40, 54, 69, 0.3);
+    z-index: 6;
   }
 
   .page-header__link {
