--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   background-color: @bg-darkgrey;
-  .inner(320px; 20px);
+  .inner(320px; 0);
 }
 
 .page-header__nav-list {
@@ -11,8 +11,8 @@
   list-style: none;
   margin: 0;
   padding: 0;
-  background-color: rgba(40, 54, 69, 0.3);
-  z-index: 6;
+  background-color: rgba(0, 0, 0, 0.3);
+  z-index: 2;
 
   &--closed {
     display: none;
@@ -20,19 +20,23 @@
 }
 
 .page-header__nav-item {
-  width: 180px;
+  width: 320px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
   .fonts(bold; 18px; 32px);
   background-color: @bg-darkgrey;
-  border-top: 2px solid #485471;
-  border-bottom: 2px solid @col-black;
+  border-top: 1px solid #485471;
+  border-bottom: 1px solid @col-black;
   text-transform: uppercase;
   text-align: center;
-  padding: 25px 70px;
-  z-index: 6;
+  z-index: 2;
 }
 
 .page-header__link {
   .link(@bg-white);
+  padding: 15px 67px;
 
   &:focus,
   &:hover {
@@ -46,7 +50,7 @@
 
 @media (min-width: @tablet-width) {
   .page-header__inner {
-    .inner(660px; 20px);
+    .inner(660px; 0);
   }
 
   .page-header__nav-list {
@@ -62,13 +66,18 @@
   }
 
   .page-header__nav-item {
-    width: 520px;
+    width: 660px;
+  }
+
+  .page-header__link {
+    .link(@bg-white);
+    padding: 15px 255px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .page-header {
-    background-color: transparent;
+    background-color: rgba(0, 0, 0, 0.3);
   }
 
   .page-header__inner {
@@ -77,28 +86,41 @@
     flex-wrap: nowrap;
     align-items: center;
     background-color: rgba(40, 54, 69, 0.3);
-    z-index: 6;
+    z-index: 2;
     .inner(1180px; 10px);
   }
 
   .page-header__nav-list {
     display: flex;
-    width: 680px;
+    width: 700px;
+    margin-left: -7px;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     flex-wrap: nowrap;
-    background-color: transparent;
+    background-color: rgba(0, 0, 0, 0.7);
   }
 
   .page-header__nav-item {
     .fonts(400; 18px; 18px);
+    margin: 0;
     padding: 0;
     border: none;
-    background-color: rgba(40, 54, 69, 0.3);
-    z-index: 6;
+    text-transform: capitalize;
+    background-color: rgba(0, 0, 0, 0.3);
+    z-index: 2;
+
+    &:nth-child(2) {
+      margin-left: -12px;
+    }
+
+    &:nth-child(3) {
+      margin-left: -12px;
+    }
   }
 
   .page-header__link {
+    padding: 30px 19px;
+
     &:active {
       color: rgba(255, 255, 255, 0.3);
       border-bottom: 2px solid @bg-white;
