--- a/source/less/blocks/application-market.less
+++ b/source/less/blocks/application-market.less
@@ -1,15 +1,29 @@
 .application-market {
-  background: transparent url("../img/bg-back-mobile@1x.jpg") no-repeat top;
+  background: url("../img/bg-back-mobile@1x.jpg") no-repeat 50% 17%;
+}
+
+@media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+  .application-market {
+    background-image: url("../img/bg-back-mobile@2x.jpg");
+    background-size: 320px 462px;
+  }
 }
 
 .application-market__inner {
-  .inner(280px; 20px);
-  min-height: 768px;
+  .inner(320px; 0);
+  min-height: 786px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  background: transparent url("../img/iphone-hand-mobile@1x.png") no-repeat 0 37%;
+  background: url("../img/iphone-hand-mobile@1x.png") no-repeat 0 42%;
+}
+
+@media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+  .application-market__inner {
+    background-image: url("../img/iphone-hand-mobile@2x.png");
+    background-size: 258px 276px;
+  }
 }
 
 .application-market__title {
@@ -21,26 +35,24 @@
 
 .application-market__box {
   .inner(320px; 0);
+  padding-top: 30px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-left: -20px;
-  padding: 30px 0;
   background-color: #1d2631;
 }
 
 .application-market__button {
-  width: 280px;
-  .fonts(400; 18px; 18px);
+  width: 260px;
+  .fonts(700; 18px; 18px);
   .link(@bg-white);
   border: 2px solid @bg-white;
-  padding: 15px 10px;
+  padding: 17px 10px;
   border-radius: 30px;
   text-align: center;
-  text-transform: uppercase;
 
-  &:hover,
-  &:focus {
+  &:focus,
+  &:hover {
     background-color: @bg-white;
     color: @col-red;
   }
@@ -51,13 +63,14 @@
 }
 
 .application-market__list {
-  width: 205px;
+  width: 200px;
+  height: 56px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: flex-end;
-  margin: 30px auto;
-  padding: 0;
+  padding: 39px 18px 2px 16px;
+  margin: 0;
   list-style: none;
 }
 
@@ -70,38 +83,66 @@
   .fonts(300; 14px; 24px);
   color: @bg-white;
   text-align: center;
+  padding-bottom: 35px;
 }
 
 @media (min-width: @tablet-width) {
   .application-market {
-    padding-top: 70px;
+    padding-top: 56px;
     background: url("../img/bg-back-tablet@1x.jpg") no-repeat center -9px;
   }
 
+  @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+    .application-market {
+      background-image: url("../img/bg-back-tablet@2x.jpg");
+      background-size: 1200px 729px;
+    }
+  }
+
   .application-market__inner {
-    min-width: 660px;
+    .inner(620px; 20px);
+    min-height: 700px;
     justify-content: center;
     align-items: flex-start;
-    background: transparent url("../img/iphone-hand-tablet@1x.png") no-repeat 100% 100%;
+    background: transparent url("../img/iphone-hand-tablet@1x.png") no-repeat 50% 75%;
+  }
+
+  @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+    .application-market__inner {
+      background-image: url("../img/iphone-hand-tablet@2x.png");
+      background-size: 700px 545px;
+    }
   }
 
   .application-market__title {
-    .inner(620px; 20px);
-    display: flex;
-    flex-direction: column;
     width: 200px;
-    .fonts(300; 40px; normal);
+    .fonts(300; 40px; 48px);
     color: @bg-white;
-    margin-left: 20px;
+    margin: 41px 0 0 50px;
     text-align: center;
   }
 
   .application-market__box {
-    .inner(620px; 20px);
-    width: 300px;
+    .inner(340px; 0);
+    justify-content: space-between;
     margin: 0;
-    margin-top: 20px;
     background-color: transparent;
+  }
+
+  .application-market__button {
+    width: 275px;
+    margin: 33px 35px 20px 0;
+  }
+
+  .application-market__list {
+    padding: 33px 56px 2px 16px;
+  }
+
+  .application-market__text {
+    width: 300px;
+    .fonts(300; 18px; 24px);
+    margin-top: 30px;
+    margin-right: 35px;
   }
 }
 
@@ -112,14 +153,45 @@
     background-size: cover;
   }
 
+  @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+    .application-market {
+      background-image: url("../img/bg-back-desktop@2x.jpg");
+    }
+  }
+
   .application-market__inner {
-    min-width: 980px;
+    .inner(960px; 0);
+    min-height: 828px;
     justify-content: center;
     align-items: flex-start;
-    background: transparent url("../img/iphone-hand-desktop@1x.png") no-repeat 100% 100%;
+    background: url("../img/iphone-hand-desktop@1x.png") no-repeat -80% 80%;
+  }
+
+  @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+    .application-market__inner {
+      background-image: url("../img/iphone-hand-desktop@2x.png");
+      background-size: 1050px 645px;
+    }
   }
 
   .application-market__title {
-    font-size: 50px;
+    width: 250px;
+    .fonts(300; 50px; 60px);
+    margin: 60px 0 0 83px;
+  }
+
+  .application-market__button {
+    font-size: 21px;
+    margin: 50px 0 25px 75px;
+  }
+
+  .application-market__list {
+    padding: 50px 42px 18px 115px;
+  }
+
+  .application-market__text {
+    width: 300px;
+    margin-left: 110px;
+    padding-bottom: 51px;
   }
 }
