--- a/source/less/blocks/button-list.less
+++ b/source/less/blocks/button-list.less
@@ -5,8 +5,17 @@
 .button-list__logo-image {
   fill: @bg-white;
 
-  &:hover,
-  &:focus {
+  &--ismobile {
+    display: inline;
+  }
+
+  &--isdesktop,
+  &--istablet {
+    display: none;
+  }
+
+  &:focus,
+  &:hover {
     fill: @col-red;
   }
 
@@ -17,33 +26,42 @@
 
 .button-list {
   width: 280px;
-  margin-top: 5px;
-  padding: 24px 20px;
+  padding: 20px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   background-color: rgba(40, 54, 69, 0.3);
-  border-bottom: 2px solid @col-black;
-  z-index: 6;
+  border-bottom: 1px solid @col-black;
+  z-index: 2;
 }
 
-.button-list__button-close,
-.button-list__button-open {
-  background-color: @bg-darkgrey;
+.button-list__toggle--nojs {
+  display: none;
+}
+
+.button-list__toggle {
+  padding: 0;
+  margin: 0;
+  background-color: rgba(40, 54, 69, 0.3);
   border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+.button-list__toggle-close,
+.button-list__toggle-open {
   fill: @bg-white;
 
   &--opened {
     display: block;
   }
 
-  &--closed,
-  &--nojs {
+  &--closed {
     display: none;
   }
 
-  &:hover,
-  &:focus {
+  &:focus,
+  &:hover {
     fill: @col-red;
   }
 
@@ -53,19 +71,41 @@
 }
 
 @media (min-width: @tablet-width) {
+  .button-list__logo-image {
+    &--ismobile {
+      display: none;
+    }
+
+    &--istablet {
+      display: inline;
+    }
+  }
+
   .button-list {
     width: 620px;
+    padding: 36px 20px;
   }
 }
 
 @media (min-width: @desktop-width) {
+  .button-list__logo-image {
+    &--istablet {
+      display: none;
+    }
+
+    &--isdesktop {
+      display: inline;
+    }
+  }
+
   .button-list {
-    width: 220px;
+    width: 150px;
+    margin-top: -5px;
+    margin-left: 95px;
     border: none;
   }
 
-  .button-list__button-close,
-  .button-list__button-open {
+  .button-list__toggle {
     display: none;
   }
 }
