--- a/source/less/blocks/photo-list.less
+++ b/source/less/blocks/photo-list.less
@@ -6,17 +6,20 @@
   background-color: @bg-white;
   color: @bg-darkgrey;
   list-style: none;
+  margin-top: -15px;
 }
 
 .photo-list__item {
   .inner(280px; 0);
   display: flex;
   flex-direction: column;
-  min-height: 300px;
-  margin: 10px auto;
+  min-height: 280px;
+  margin: 20px auto 5px;
   background-color: @bg-lightgrey;
 
   &--panorama {
+    padding-bottom: 16px;
+
     .photo-list__image {
       position: absolute;
       width: 320px;
@@ -25,7 +28,46 @@
     }
 
     .photo-list__item-name {
-      margin-top: 150px;
+      margin-top: 155px;
+      position: relative;
+
+      &::after {
+        content: "";
+        position: absolute;
+        width: 140px;
+        height: 35px;
+        background-color: @col-red;
+        top: -155px;
+        right: 0;
+      }
+
+      &::before {
+        content: "Панорама дня";
+        position: absolute;
+        .fonts(700; 12px; 24px);
+        color: @bg-white;
+        text-transform: uppercase;
+        text-align: center;
+        width: 102px;
+        height: 12px;
+        top: -150px;
+        right: 20px;
+        z-index: 2;
+      }
+    }
+
+    .photo-list__item-paragraph {
+      width: 260px;
+      margin: -15px 0 0 18px;
+    }
+
+    .photo-list__item-like {
+      width: 129px;
+      margin: 11px 5px 0 16px;
+    }
+
+    .photo-list__item-text {
+      margin-left: 17px;
     }
   }
 }
@@ -37,35 +79,43 @@
 
 .photo-list__item-name {
   .fonts(700; 14px; 24px);
-  margin-top: 15px;
-  margin-left: 20px;
+  margin-top: 9px;
+  margin-left: 18px;
 }
 
 .photo-list__item-paragraph {
   .inner(240px; 0);
   .fonts(400; 14px; 24px);
   color: @bg-darkgrey;
+  margin-top: -15px;
+  margin-right: 23px;
 }
 
 .photo-list__item-time {
   .fonts(300; 12px; 24px);
   color: @bg-darkgrey;
   text-transform: uppercase;
+  margin-left: 5px;
 }
 
 .photo-list__item-like {
   width: 140px;
-  margin-top: 15px;
+  margin-top: 12px;
   margin-bottom: 15px;
-  margin-left: 20px;
+  margin-left: 18px;
   .fonts(400; 12px; 24px);
   color: @col-red;
   text-transform: uppercase;
 }
 
 .photo-list__item-text {
-  margin-left: 20px;
+  margin-left: 17px;
 }
+
+.photo-list__item-heart {
+  color: @col-red;
+}
+
 
 @media (min-width: @tablet-width) {
   .photo-list {
@@ -75,11 +125,11 @@
   }
 
   .photo-list__item {
-    .inner(300px; 0);
-    min-height: 460px;
-    margin-bottom: 20px;
+    width: 300px;
     justify-content: space-between;
-    align-items: flex-start;
+    min-height: 455px;
+    margin-top: 0;
+    margin-bottom: 20px;
 
     &:nth-child(even) {
       margin-right: 20px;
@@ -87,16 +137,28 @@
 
     &--panorama {
       .inner(620px; 0);
-      margin-bottom: 20px;
+      display: flex;
       min-height: 630px;
+      margin-bottom: 50px;
 
       .photo-list__image {
+        margin-top: -2px;
         width: 660px;
         height: 510px;
       }
 
       .photo-list__item-name {
-        margin-top: 530px;
+        margin: 483px 5px 0 30px;
+
+        &::after {
+          top: -475px;
+          left: 450px;
+        }
+
+        &::before {
+          top: -470px;
+          left: 470px;
+        }
       }
 
       .photo-list__item-like {
@@ -105,16 +167,14 @@
         justify-content: space-between;
         align-items: baseline;
         width: 140px;
-        margin-top: -20px;
-        margin-left: 450px;
+        margin-top: -74px;
+        margin-left: 455px;
         order: 2;
       }
 
       .photo-list__item-paragraph {
-        width: 520px;
-        margin-left: 30px;
-        margin-top: -30px;
-        margin-bottom: 25px;
+        width: 522px;
+        margin: -55px 0 27px 30px;
         order: 3;
       }
     }
@@ -126,20 +186,26 @@
   }
 
   .photo-list__item-name {
-    margin-top: 20px;
-    margin-left: 30px;
+    display: flex;
+    align-items: baseline;
+    margin: 15px 5px auto 30px;
   }
 
   .photo-list__item-paragraph {
-    margin-top: -10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-content: space-between;
+    margin: -15px 0 auto 30px;
   }
 
   .photo-list__item-like {
-    width: 250px;
+    width: 260px;
     display: flex;
     flex-direction: row-reverse;
     justify-content: space-between;
     align-items: baseline;
+    margin-bottom: 20px;
     margin-left: 10px;
   }
 }
@@ -147,11 +213,13 @@
 @media (min-width: @desktop-width) {
   .photo-list {
     .inner(940px; 130px);
+    margin-left: 160px;
   }
 
   .photo-list__item {
+    width: 300px;
     min-height: 555px;
-    margin-bottom: 20px;
+    margin: 0 0 50px 0;
 
     &:nth-child(even) {
       margin-right: 0;
@@ -165,23 +233,31 @@
     }
 
     &--panorama {
-      .inner(940px; 0);
-      margin-bottom: 20px;
+      width: 940px;
+      margin: 0 0 50px 0;
       min-height: 600px;
 
       .photo-list__image {
         width: 1200px;
         height: 505px;
-        margin-left: -160px;
+        margin-left: -130px;
       }
 
       .photo-list__item-name {
-        margin-top: 520px;
+        margin-top: 510px;
+
+        &::after {
+          left: 769px;
+        }
+
+        &::before {
+          left: 789px;
+        }
       }
 
       .photo-list__item-like {
-        margin-top: -30px;
-        margin-left: 760px;
+        margin-top: -40px;
+        margin-left: 772px;
       }
 
       .photo-list__item-paragraph {
