--- a/source/less/blocks/application-market.less
+++ b/source/less/blocks/application-market.less
@@ -89,7 +89,8 @@
 @media (min-width: @tablet-width) {
   .application-market {
     padding-top: 56px;
-    background: url("../img/bg-back-tablet@1x.jpg") no-repeat center -9px;
+    background: url("../img/bg-back-tablet@1x.jpg") no-repeat center 100%;
+    background-size: 660px 729px;
   }
 
   @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
