--- a/source/less/blocks/button-list.less
+++ b/source/less/blocks/button-list.less
@@ -26,11 +26,11 @@
 
 .button-list {
   width: 280px;
-  padding: 20px;
+  padding: 10px 20px 20px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: rgba(40, 54, 69, 0.3);
+
   border-bottom: 1px solid @col-black;
   z-index: 2;
 }
@@ -83,7 +83,7 @@
 
   .button-list {
     width: 620px;
-    padding: 36px 20px;
+    padding: 16px 20px 36px;
   }
 }
 
@@ -103,6 +103,7 @@
     margin-top: -5px;
     margin-left: 95px;
     border: none;
+    background-color: transparent;
   }
 
   .button-list__toggle {
