--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,7 +1,10 @@
+.page-header {
+  background-color: @bg-darkgrey;
+}
+
 .page-header__inner {
   display: flex;
   flex-direction: column;
-  background-color: @bg-darkgrey;
   .inner(320px; 0);
 }
 
@@ -11,8 +14,6 @@
   list-style: none;
   margin: 0;
   padding: 0;
-  background-color: rgba(0, 0, 0, 0.3);
-  z-index: 2;
 
   &--closed {
     display: none;
@@ -54,8 +55,6 @@
   }
 
   .page-header__nav-list {
-    .inner(660px; 0);
-
     &--closed {
       display: none;
     }
@@ -77,7 +76,8 @@
 
 @media (min-width: @desktop-width) {
   .page-header {
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgba(0, 0, 0, 0.7);
+    z-index: 2;
   }
 
   .page-header__inner {
@@ -85,19 +85,19 @@
     justify-content: space-around;
     flex-wrap: nowrap;
     align-items: center;
-    background-color: rgba(40, 54, 69, 0.3);
-    z-index: 2;
     .inner(1180px; 10px);
+    background-color: transparent;
   }
 
   .page-header__nav-list {
     display: flex;
     width: 700px;
+    margin-top: -8px;
     margin-left: -7px;
     flex-direction: row;
     justify-content: space-between;
     flex-wrap: nowrap;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: transparent;
   }
 
   .page-header__nav-item {
@@ -106,8 +106,7 @@
     padding: 0;
     border: none;
     text-transform: capitalize;
-    background-color: rgba(0, 0, 0, 0.3);
-    z-index: 2;
+    background-color: transparent;
 
     &:nth-child(2) {
       margin-left: -12px;
@@ -120,6 +119,7 @@
 
   .page-header__link {
     padding: 30px 19px;
+    background-color: transparent;
 
     &:active {
       color: rgba(255, 255, 255, 0.3);
