--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -14,7 +14,6 @@
 }
 
 .page-main__inner {
-  min-height: 100px;
   background: @bg-darkgrey url("../img/bg-back-mobile@1x.jpg") no-repeat center -9px;
 }
 
@@ -31,7 +30,6 @@
 
 .page-main__title,
 .page-main__title-photo {
-  .inner(280px; 20px);
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -45,8 +43,9 @@
 
 @media (min-width: @tablet-width) {
   .page-main__inner {
-    background: @bg-darkgrey url("../img/bg-back-tablet@1x.jpg") no-repeat 50% 100%;
+    background: @bg-darkgrey url("../img/bg-back-tablet@1x.jpg") no-repeat center;
     padding-bottom: 32px;
+    background-size: 660px auto;
   }
 
   @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
@@ -80,12 +79,11 @@
 @media (min-width: @desktop-width) {
   .page-main__inner {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
-    min-height: 385px;
-    margin: 0;
-    padding: 0;
-    background: @bg-darkgrey url("../img/bg-back-desktop@1x.jpg") no-repeat center -9px;
+    align-items: center;
+    min-height: 365px;
+    background: url("../img/bg-back-desktop@1x.jpg") no-repeat center -9px;
   }
 
   @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
@@ -99,18 +97,21 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-top: -7px;
+    align-items: center;
+    margin-top: -9px;
+    background-color: @bg-white;
   }
 
   .page-main__title {
     .inner(820px; 0);
-    margin: 60px 239px 0 321px;
+    padding: 80px 0 0 87px;
   }
 
   .page-main__title-photo {
-    width: 350px;
-    margin-top: 80px;
-    margin-left: 581px;
+    .inner(350px; 0);
+    margin-top: 85px;
+    padding-left: 90px;
+    text-align: center;
   }
 
   .page-main__post-paragraph {
