--- a/source/less/blocks/photo-list.less
+++ b/source/less/blocks/photo-list.less
@@ -212,8 +212,12 @@
 
 @media (min-width: @desktop-width) {
   .photo-list {
-    .inner(940px; 130px);
-    margin-left: 160px;
+    .inner(940px; 0);
+    padding-left: 94px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
   }
 
   .photo-list__item {
