--- a/source/less/style.less
+++ b/source/less/style.less
@@ -11,3 +11,4 @@
 @import "blocks/page-body.less";
 @import "blocks/button-list.less";
 @import "blocks/photo-list.less";
+@import "blocks/reviews.less";
