--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -86,7 +86,8 @@
   }
 
   .advantages__post {
-    .fonts(300; 40px; 48px);
+    font-size: 40px;
+    line-height: 48px;
     padding-top: 50px;
     padding-bottom: 45px;
   }
@@ -200,7 +201,8 @@
 
 @media (min-width: @desktop-width) {
   .advantages__post {
-    .fonts(300; 50px; 58px);
+    font-size: 50px;
+    line-height: 58px;
     padding: 79px 0 37px 92px;
   }
 
@@ -224,7 +226,6 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-
     width: 940px;
     padding: 0 0 0 80px;
     background-image: none;
@@ -270,14 +271,15 @@
 
   .advantages__title {
     width: 230px;
-    .fonts(700; 30px; 30px);
-    margin: 0 0 25px 33px;
+    font-size: 30px;
+    line-height: 30px;
     text-align: center;
   }
 
   .advantages__paragraph {
     .inner(252px; 0);
-    .fonts(400; 18px; 30px);
+    font-size: 18px;
+    line-height: 30px;
     text-align: center;
   }
 
@@ -294,11 +296,12 @@
   }
 
   .advantages__research-box {
-    .fonts(700; 120px; 186px);
+    font-size: 120px;
+    line-height: 186px;
     width: 224px;
     height: 224px;
     border: 16px solid @col-red;
-    margin: 84px 0 5px 79px;
+    margin: 86px 0 5px 81px;
   }
 
   .advantages__research-text {
@@ -314,12 +317,14 @@
   .advantages__research-post {
     width: 525px;
     margin: 20px 0 0 87px;
-    .fonts(400; 18px; 30px);
+    font-size: 18px;
+    line-height: 30px;
   }
 
   .advantages__research-link {
     width: 290px;
-    .fonts(400; 18px; 30px);
+    font-size: 18px;
+    line-height: 30px;
     margin: 31px 0 0 90px;
   }
 }
