--- a/source/less/blocks/application-market.less
+++ b/source/less/blocks/application-market.less
@@ -117,7 +117,8 @@
 
   .application-market__title {
     width: 200px;
-    .fonts(300; 40px; 48px);
+    font-size: 40px;
+    line-height: 48px;
     color: @bg-white;
     margin: 41px 0 0 50px;
     text-align: center;
@@ -141,7 +142,7 @@
 
   .application-market__text {
     width: 300px;
-    .fonts(300; 18px; 24px);
+    font-size: 18px;
     margin-top: 30px;
     margin-right: 35px;
   }
@@ -152,6 +153,7 @@
     min-width: 1200px;
     background: url("../img/bg-back-desktop@1x.jpg") no-repeat 0 -10%;
     background-size: cover;
+    z-index: -1;
   }
 
   @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
@@ -177,7 +179,8 @@
 
   .application-market__title {
     width: 250px;
-    .fonts(300; 50px; 60px);
+    font-size: 50px;
+    line-height: 60px;
     margin: 60px 0 0 83px;
   }
 
