--- a/source/less/blocks/button-list.less
+++ b/source/less/blocks/button-list.less
@@ -103,7 +103,7 @@
     margin-top: -5px;
     margin-left: 95px;
     border: none;
-    background-color: transparent;
+    background-color: rgba(0, 0, 0, 0.3);
   }
 
   .button-list__toggle {
