--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -47,13 +47,18 @@
   margin-left: -50px;
 }
 
-.page-footer__social-item {
-  width: 50px;
-  height: 35px;
+.page-footer__social-link {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 25px;
+  height: 25px;
   border: 4px solid @col-lightengrey;
   border-radius: 50%;
   text-align: center;
-  padding-top: 15px;
+  padding: 10px;
+  cursor: pointer;
 
   &:hover,
   &:focus {
