--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -26,7 +26,7 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  .fonts(bold; 18px; 32px);
+  .fonts(700; 18px; 32px);
   background-color: @bg-darkgrey;
   border-top: 1px solid #485471;
   border-bottom: 1px solid @col-black;
@@ -76,7 +76,7 @@
 
 @media (min-width: @desktop-width) {
   .page-header {
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(0, 0, 0, 0.3);
     z-index: 2;
   }
 
