--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -57,14 +57,16 @@
 
   .page-main__title-photo {
     margin-top: 87px;
-    .fonts(300; 50px; 58px);
+    font-size: 50px;
+    line-height: 58px;
     width: 620px;
     padding: 85px 0 60px 0;
   }
 
   .page-main__title {
     margin-top: 87px;
-    .fonts(300; 50px; 58px);
+    font-size: 50px;
+    line-height: 58px;
     width: 620px;
     padding: 85px 0 0 0;
   }
@@ -84,6 +86,7 @@
     align-items: center;
     min-height: 365px;
     background: url("../img/bg-back-desktop@1x.jpg") no-repeat center -9px;
+    z-index: -1;
   }
 
   @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
