--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -202,19 +202,18 @@
 @media (min-width: @desktop-width) {
   .advantages__post {
     font-size: 50px;
-    line-height: 58px;
-    padding: 79px 0 37px 92px;
+    line-height: 60px;
+    padding: 62px 0 70px 92px;
+    margin: 0;
   }
 
   .advantages__post-item {
     &:nth-child(1) {
       width: 768px;
-      margin-top: -10px;
     }
 
     &:nth-child(2) {
       width: 460px;
-      margin-bottom: 10px;
     }
   }
 
@@ -226,27 +225,27 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    width: 940px;
-    padding: 0 0 0 80px;
+    .inner(940px; 0);
     background-image: none;
+    margin-top: 5px;
   }
 
   .advantages__item {
-    padding: 375px 0 0 10px;
+    padding: 358px 0 0 68px;
 
     &:nth-child(1) {
-      background: url("../img/iphone-screen-1-desktop@1x.png") no-repeat 75% 6%;
-      margin: 15px 0 0 0;
+      background: url("../img/iphone-screen-1-desktop@1x.png") no-repeat 175% 0;
+      margin: auto;
     }
 
     &:nth-child(2) {
-      background: url("../img/iphone-screen-2-desktop@1x.png") no-repeat 140% 6%;
-      margin: 0 0 0 15px;
+      background: url("../img/iphone-screen-2-desktop@1x.png") no-repeat 183% 0;
+      margin: auto;
     }
 
     &:nth-child(3) {
-      background: url("../img/iphone-screen-3-desktop@1x.png") no-repeat 120% 6%;
-      margin: 0 0 0 20px;
+      background: url("../img/iphone-screen-3-desktop@1x.png") no-repeat 185% 0;
+      margin: auto;
     }
   }
 
@@ -270,17 +269,27 @@
   }
 
   .advantages__title {
-    width: 230px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    .inner(224px; 0);
     font-size: 30px;
     line-height: 30px;
     text-align: center;
   }
 
   .advantages__paragraph {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     .inner(252px; 0);
     font-size: 18px;
     line-height: 30px;
     text-align: center;
+    margin-top: 25px;
   }
 
   .advantages__research {
@@ -292,20 +301,21 @@
   .advantages__research-image {
     width: 300px;
     height: 350px;
-    margin: 16px 0 20px 60px;
+    margin: 19px 0 20px 55px;
   }
 
   .advantages__research-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-size: 120px;
-    line-height: 186px;
-    width: 224px;
-    height: 224px;
-    border: 16px solid @col-red;
-    margin: 86px 0 5px 81px;
+    padding: 23px;
+    border: 17px solid @col-red;
+    margin: 89px 0 0 78px;
   }
 
   .advantages__research-text {
-    margin: 80px 0 0 0;
+    margin: 83px 0 0 2px;
   }
 
   .advantages__research-title {
