--- a/source/less/blocks/application-market.less
+++ b/source/less/blocks/application-market.less
@@ -28,7 +28,7 @@
 
 .application-market__title {
   width: 222px;
-  .fonts(400; 18px; 18px);
+  .fonts(300; 18px; 18px);
   color: transparent;
   text-align: center;
 }
@@ -105,7 +105,7 @@
     min-height: 700px;
     justify-content: center;
     align-items: flex-start;
-    background: transparent url("../img/iphone-hand-tablet@1x.png") no-repeat 50% 75%;
+    background: url("../img/iphone-hand-tablet@1x.png") no-repeat 50% 75%;
   }
 
   @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
@@ -116,28 +116,34 @@
   }
 
   .application-market__title {
-    width: 200px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    width: 180px;
     font-size: 40px;
     line-height: 48px;
     color: @bg-white;
-    margin: 41px 0 0 50px;
+    margin: 43px 0 0 59px;
     text-align: center;
   }
 
   .application-market__box {
-    .inner(340px; 0);
-    justify-content: space-between;
+    width: 320px;
     margin: 0;
+    padding: 0;
+    justify-content: space-between;
     background-color: transparent;
   }
 
   .application-market__button {
     width: 275px;
-    margin: 33px 35px 20px 0;
+    margin: 29px 35px 20px 14px;
   }
 
   .application-market__list {
-    padding: 33px 56px 2px 16px;
+    padding: 31px 45px 2px 24px;
   }
 
   .application-market__text {
@@ -145,6 +151,7 @@
     font-size: 18px;
     margin-top: 30px;
     margin-right: 35px;
+    margin-left: 12px;
   }
 }
 
@@ -164,10 +171,11 @@
 
   .application-market__inner {
     .inner(960px; 0);
-    min-height: 828px;
+    min-height: 800px;
+    margin-top: 14px;
     justify-content: center;
     align-items: flex-start;
-    background: url("../img/iphone-hand-desktop@1x.png") no-repeat -80% 80%;
+    background: url("../img/iphone-hand-desktop@1x.png") no-repeat -80% 83%;
   }
 
   @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
@@ -181,21 +189,22 @@
     width: 250px;
     font-size: 50px;
     line-height: 60px;
-    margin: 60px 0 0 83px;
+    margin: 60px 0 0 81px;
   }
 
   .application-market__button {
     font-size: 21px;
-    margin: 50px 0 25px 75px;
+    margin: 52px 0 23px 95px;
+    z-index: 2;
   }
 
   .application-market__list {
-    padding: 50px 42px 18px 115px;
+    padding: 50px 25px 20px 118px;
   }
 
   .application-market__text {
     width: 300px;
-    margin-left: 110px;
+    margin-left: 125px;
     padding-bottom: 51px;
   }
 }
