--- a/source/less/blocks/button-list.less
+++ b/source/less/blocks/button-list.less
@@ -26,7 +26,7 @@
 
 .button-list {
   width: 280px;
-  padding: 10px 20px 20px;
+  padding: 20px 20px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -41,7 +41,7 @@
 
 .button-list__toggle {
   padding: 0;
-  margin: 0;
+  margin-top: 6px;
   background-color: rgba(40, 54, 69, 0.3);
   border: none;
   outline: none;
@@ -83,7 +83,7 @@
 
   .button-list {
     width: 620px;
-    padding: 16px 20px 36px;
+    padding: 10px 20px 35px;
   }
 }
 
@@ -100,8 +100,8 @@
 
   .button-list {
     width: 150px;
-    margin-top: -5px;
-    margin-left: 95px;
+    margin-top: -6px;
+    margin-left: 98px;
     border: none;
     background-color: rgba(0, 0, 0, 0.3);
   }
