--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,5 +1,6 @@
 .page-header {
   background-color: @bg-darkgrey;
+  margin-top: 20px;
 }
 
 .page-header__inner {
@@ -50,6 +51,10 @@
 }
 
 @media (min-width: @tablet-width) {
+  .page-header {
+    margin-top: -1px;
+  }
+
   .page-header__inner {
     .inner(660px; 0);
   }
@@ -92,8 +97,8 @@
   .page-header__nav-list {
     display: flex;
     width: 700px;
-    margin-top: -8px;
-    margin-left: -7px;
+    margin-top: -21px;
+    margin-left: -2px;
     flex-direction: row;
     justify-content: space-between;
     flex-wrap: nowrap;
@@ -118,7 +123,7 @@
   }
 
   .page-header__link {
-    padding: 30px 19px;
+    padding: 29px 19px;
     background-color: transparent;
 
     &:active {
