--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -9,12 +9,18 @@
   .inner(250px; 0);
   .fonts(400; 14px; 30px);
   color: @bg-darkgrey;
-  padding: 45px 30px;
+  padding: 45px 30px 50px;
   text-align: center;
 }
 
 .page-main__inner {
+  padding-top: 40px;
+  padding-bottom: 30px;
   background: @bg-darkgrey url("../img/bg-back-mobile@1x.jpg") no-repeat center -9px;
+
+  &--form {
+    padding-bottom: 0;
+  }
 }
 
 @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
@@ -36,7 +42,7 @@
   align-items: center;
   .fonts(300; 24px; 30px);
   width: 280px;
-  margin: 128px auto 50px;
+  margin: 90px auto 50px;
   text-align: center;
   color: @bg-white;
 }
@@ -44,7 +50,7 @@
 @media (min-width: @tablet-width) {
   .page-main__inner {
     background: @bg-darkgrey url("../img/bg-back-tablet@1x.jpg") no-repeat center;
-    padding-bottom: 32px;
+    padding: 0 0 30px 0;
     background-size: 660px auto;
   }
 
@@ -60,21 +66,22 @@
     font-size: 50px;
     line-height: 58px;
     width: 620px;
-    padding: 85px 0 60px 0;
+    padding: 83px 0 60px 0;
   }
 
   .page-main__title {
     margin-top: 87px;
     font-size: 50px;
-    line-height: 58px;
+    line-height: 60px;
     width: 620px;
-    padding: 85px 0 0 0;
+    padding: 83px 0 0 0;
   }
 
   .page-main__post-paragraph {
     .inner(440px; 0);
     font-size: 18px;
-    padding: 90px 110px 78px;
+    line-height: 31px;
+    padding: 94px 110px 78px;
   }
 }
 
@@ -87,6 +94,10 @@
     min-height: 365px;
     background: url("../img/bg-back-desktop@1x.jpg") no-repeat center -9px;
     z-index: -1;
+
+    &--form {
+      padding-bottom: 18px;
+    }
   }
 
   @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
