--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -112,7 +112,7 @@
 @media (min-width: @desktop-width) {
   .page-footer__inner {
     width: 940px;
-    margin: 0 auto;
+    margin: 10px auto;
     padding: 75px 130px;
   }
 
@@ -124,5 +124,21 @@
     &--isdesktop {
       display: inline;
     }
+  }
+
+  .page-footer__social-list {
+    padding: 10px 5px 0 53px;
+  }
+
+  .page-footer__copyright {
+    padding: 2px 15px 0 0;
+  }
+
+  .page-footer__copyright-text  {
+    font-size: 18px;
+  }
+
+  .page-footer__copyright-image {
+    padding: 15px 0 0 9px;
   }
 }
