--- a/source/less/blocks/photo-list.less
+++ b/source/less/blocks/photo-list.less
@@ -14,8 +14,7 @@
   flex-direction: column;
   justify-content: space-between;
   min-height: 300px;
-  margin: 1px auto 20px;
-
+  margin: 0 auto 20px;
   background-color: @bg-lightgrey;
 
   &--panorama {
@@ -64,7 +63,7 @@
 
     .photo-list__item-like {
       width: 129px;
-      margin: 12px 5px 0 14px;
+      margin: 10px 5px 0 14px;
     }
 
     .photo-list__item-text {
@@ -152,12 +151,12 @@
         margin: 476px 0 0 30px;
 
         &::after {
-          top: -478px;
+          top: -475px;
           left: 450px;
         }
 
         &::before {
-          top: -473px;
+          top: -471px;
           left: 470px;
         }
       }
@@ -239,24 +238,24 @@
 
     &--panorama {
       width: 940px;
-      margin: 0 0 50px 0;
+      margin: 0 0 50px -10px;
       min-height: 600px;
 
       .photo-list__image {
         width: 1200px;
         height: 505px;
-        margin-left: -130px;
+        margin-left: -7px;
       }
 
       .photo-list__item-name {
         margin-top: 510px;
 
         &::after {
-          left: 769px;
+          left: 773px;
         }
 
         &::before {
-          left: 789px;
+          left: 792px;
         }
       }
 
