--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -200,6 +200,10 @@
 }
 
 @media (min-width: @desktop-width) {
+  .advantages {
+    margin-left: -90px;
+  }
+
   .advantages__post {
     font-size: 50px;
     line-height: 60px;
@@ -235,17 +239,17 @@
 
     &:nth-child(1) {
       background: url("../img/iphone-screen-1-desktop@1x.png") no-repeat 175% 0;
-      margin: auto;
+      margin: 0;
     }
 
     &:nth-child(2) {
-      background: url("../img/iphone-screen-2-desktop@1x.png") no-repeat 183% 0;
-      margin: auto;
+      background: url("../img/iphone-screen-2-desktop@1x.png") no-repeat 83% 0%;
+      margin: 0;
     }
 
     &:nth-child(3) {
       background: url("../img/iphone-screen-3-desktop@1x.png") no-repeat 185% 0;
-      margin: auto;
+      margin: 0;
     }
   }
 
@@ -254,16 +258,19 @@
       &:nth-child(1) {
         background-image: url("../img/iphone-screen-1-desktop@2x.png");
         background-size: 292px 302px;
+        margin: 0;
       }
 
       &:nth-child(2) {
-        background: url("../img/iphone-screen-2-desktop@2x.png");
+        background: url("../img/iphone-screen-2-desktop@2x.png") no-repeat 183% 0%;
         background-size: 292px 302px;
+        margin: 0;
       }
 
       &:nth-child(3) {
-        background: url("../img/iphone-screen-3-desktop@1x.png");
+        background: url("../img/iphone-screen-3-desktop@2x.png") no-repeat 185% 0;
         background-size: 292px 302px;
+        margin: 0;
       }
     }
   }
@@ -295,7 +302,7 @@
   .advantages__research {
     .inner(960px; 0);
     background-color: @bg-lightgrey;
-    padding: 45px 0 87px 0;
+    padding: 48px 0 87px 0;
   }
 
   .advantages__research-image {
