--- a/source/less/blocks/application-market.less
+++ b/source/less/blocks/application-market.less
@@ -16,12 +16,12 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  background: url("../img/iphone-hand-mobile@1x.png") no-repeat 0 42%;
+  background: url("../img/iphone-hand-mobile@1x.png") no-repeat 0 41%;
 }
 
 @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
   .application-market__inner {
-    background-image: url("../img/iphone-hand-mobile@2x.png");
+    background-image: url("../img/iphone-hand-mobile@2x.png") no-repeat 0 40%;
     background-size: 258px 276px;
   }
 }
@@ -157,10 +157,11 @@
 
 @media (min-width: @desktop-width) {
   .application-market {
-    min-width: 1200px;
+    min-width: 960px;
+    margin-left: -93px;
     background: url("../img/bg-back-desktop@1x.jpg") no-repeat 0 -10%;
     background-size: cover;
-    z-index: -1;
+
   }
 
   @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
