--- a/source/less/blocks/button-list.less
+++ b/source/less/blocks/button-list.less
@@ -41,7 +41,7 @@
 
 .button-list__toggle {
   padding: 0;
-  margin-top: 6px;
+  margin-top: -3px;
   background-color: rgba(40, 54, 69, 0.3);
   border: none;
   outline: none;
@@ -85,6 +85,10 @@
     width: 620px;
     padding: 10px 20px 35px;
   }
+
+  .button-list__toggle {
+    padding-top: 12px;
+  }
 }
 
 @media (min-width: @desktop-width) {
@@ -100,8 +104,8 @@
 
   .button-list {
     width: 150px;
-    margin-top: -6px;
-    margin-left: 98px;
+    margin-top: 16px;
+    margin-left: -2px;
     border: none;
     background-color: rgba(0, 0, 0, 0.3);
   }
