--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,6 +1,6 @@
 .page-header {
   background-color: @bg-darkgrey;
-  margin-top: 20px;
+  margin-top: 0;
 }
 
 .page-header__inner {
@@ -52,7 +52,7 @@
 
 @media (min-width: @tablet-width) {
   .page-header {
-    margin-top: -1px;
+    margin-top: 17px;
   }
 
   .page-header__inner {
@@ -81,7 +81,10 @@
 
 @media (min-width: @desktop-width) {
   .page-header {
+    position: relative;
     background-color: rgba(0, 0, 0, 0.3);
+    margin-top: 0;
+    margin-left: -117px;
     z-index: 2;
   }
 
@@ -97,8 +100,8 @@
   .page-header__nav-list {
     display: flex;
     width: 700px;
-    margin-top: -21px;
-    margin-left: -2px;
+    margin-top: 5px;
+    margin-left: -102px;
     flex-direction: row;
     justify-content: space-between;
     flex-wrap: nowrap;
