--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -92,6 +92,7 @@
     justify-content: center;
     align-items: center;
     min-height: 365px;
+    margin-left: -90px;
     background: url("../img/bg-back-desktop@1x.jpg") no-repeat center -9px;
     z-index: -1;
 
@@ -113,6 +114,7 @@
     justify-content: center;
     align-items: center;
     margin-top: -9px;
+    margin-left: -90px;
     background-color: @bg-white;
   }
 
