--- a/source/less/blocks/application-market.less
+++ b/source/less/blocks/application-market.less
@@ -159,7 +159,7 @@
   .application-market {
     min-width: 960px;
     margin-left: -93px;
-    background: url("../img/bg-back-desktop@1x.jpg") no-repeat -730px -3px;
+    background: url("../img/bg-back-desktop@1x.jpg") no-repeat center -3px;
     background-size: cover;
   }
 
