--- a/source/less/blocks/photo-list.less
+++ b/source/less/blocks/photo-list.less
@@ -18,13 +18,13 @@
   background-color: @bg-lightgrey;
 
   &--panorama {
-    padding-bottom: 18px;
+    position: relative;
 
     .photo-list__image {
       position: absolute;
-      width: 320px;
-      height: 137px;
-      margin-left: -20px;
+      max-width: none;
+      left: 50%;
+      transform: translateX(-50%);
     }
 
     .photo-list__item-name {
@@ -248,7 +248,6 @@
       .photo-list__image {
         width: 1200px;
         height: 505px;
-        margin-left: -7px;
       }
 
       .photo-list__item-name {
