--- a/source/less/blocks/application-market.less
+++ b/source/less/blocks/application-market.less
@@ -27,10 +27,11 @@
 }
 
 .application-market__title {
-  width: 222px;
-  .fonts(300; 18px; 18px);
-  color: transparent;
+  width: 230px;
+  .fonts(300; 24px; 28px);
+  color: @bg-white;
   text-align: center;
+  margin-top: 124px;
 }
 
 .application-market__box {
