--- a/source/less/style.less
+++ b/source/less/style.less
@@ -11,3 +11,8 @@
 @import "blocks/page-body.less";
 @import "blocks/button-list.less";
 @import "blocks/photo-list.less";
+@import "blocks/reviews.less";
+@import "blocks/photoset.less";
+@import "blocks/contacts.less";
+@import "blocks/tariffs.less";
+@import "blocks/userform.less";
